--- a/GHGameOfLife/Pops.resx
+++ b/GHGameOfLife/Pops.resx
@@ -118,19 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="canadagoose" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="bees" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\twinbees.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="goose" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\canadagoose.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="growbyone" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="grow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\growbyone.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="shipinbottle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="ship" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\shipinbottle.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="sparky" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="spark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\sparky.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="twinbees" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\twinbees.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
