--- a/GHGameOfLife/SmallPops.resx
+++ b/GHGameOfLife/SmallPops.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Glider_D" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Glider" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\glider(down).txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="Glider_U" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -127,7 +127,7 @@
   <data name="small" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\small.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="Smallship_L" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Smallship" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\smallship(left).txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="Smallship_R" type="System.Resources.ResXFileRef, System.Windows.Forms">
