--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 You can load a file of 0's and 1's as a starting population, or default to a randomly filled board.
 There are also some preloaded populations you can choose from.
+Controls are displayed on the screen, unless they aren't.		
