Changing ugly if statements
to ugly switch statements

--- a/GHGameOfLife/SmallPops.resx
+++ b/GHGameOfLife/SmallPops.resx
@@ -121,16 +121,10 @@
   <data name="Glider" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\glider(down).txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
-  <data name="Glider_U" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\glider(up).txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="small" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Circle" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\small.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="Smallship" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\smallship(left).txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
-  <data name="Smallship_R" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>resources\smallship(right).txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
