--- a/README
+++ b/README
@@ -4,4 +4,5 @@ Just a silly little console application that lets you play around with 1D and 2D
 Supports user created rules for 1D automata and user created initial populations for 2D automata.
 Now uses .NET Core.
 
-Requires the [.NET Core runtime](https://www.microsoft.com/net/download/windows/run) to run.
+Requires the .NET Core runtime to run.
+https://www.microsoft.com/net/download/windows/run
